[package]
name = "algorithms_website"
version = "0.1.0"
edition = "2018"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.40"
gloo-events = "0.1.1"
gloo-storage = "0.2.1"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
instant = "0.1.12"
num-traits = "0.2.14"
num-integer = "0.1.44"
log = "0.4.14"
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.139"
reqwest = "0.11.9"
pulldown-cmark = { version = "0.9.1", default-features = false }
getrandom = { version = "0.2.3", features = ["js"] }

[dependencies.sorting]
path = "./src/sorting"

[dependencies.pathfinding]
path = "./src/pathfinding"

[dependencies.web-sys]
version = "0.3.56"
features = [
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "DynamicsCompressorNode",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
  "TouchList",
  "Touch"
]
